RA-46: scrollbar hidden, comments solved

--- a/src/components/pages/users/users.module.css
+++ b/src/components/pages/users/users.module.css
@@ -22,12 +22,16 @@
   text-align: center;
 }
 
-.addButton {
-  margin-top: 3%;
+.addUserButton {
+  margin-top: 2%;
 }
 
 .formContainer {
   padding: 15px;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 .inputsContainer {
